--- a/src/Components/category_styles.css
+++ b/src/Components/category_styles.css
@@ -1,13 +1,13 @@
 .categoryRow,
 .pageHeader,
-.titleRow {
+.titleRow,
+.addCategory {
 	width: 800px;
 	margin: 0 auto;
 	padding: 5px 0;
 	display: flex;
 	color: #737373;
-	font-size: 20px;	
-	/*flex-direction: row;*/	
+	font-size: 20px;		
 }
 .pageHeader{
 	justify-content: space-between;
@@ -70,7 +70,6 @@
 	padding-left: 20px;
 	text-align: left;
 	font-size: 20px;
-
 }
 
 .description,
@@ -78,11 +77,8 @@
 	width: 50%;
 	padding-left: 20px;
 	text-align: left;
-	/*font-size: 20px;*/
+	
 }
-/*.descriptionTitle{
-	font-size: 24px;
-}*/
 
 .btnAction{	
 	border: none;
@@ -100,10 +96,6 @@
 	justify-content: flex-end;	
 }
 
-/*.actionTitle{
-	justify-content: center;
-}*/
-
 .menu{
 	width: 30px;
 	height: 30px;	
@@ -117,4 +109,27 @@
 .menu:active{
 	background-color: #e6e6e6;
 	outline: 1px solid #d9d9d9;
+}
+
+.addCategory{
+	flex-direction: column;
+	align-items: center;
+}
+
+.inpName,
+.inpDescr{
+	width: 250px;
+	padding: 10px;
+	font-size: 16px;
+	color: #737373;
+	border: 1px solid #737373;
+}
+
+.inpName:focus,
+.inpDescr:focus{	
+	box-shadow: 0 0 4px 4px #d9d9d9;
+}
+
+.btnAddNew{
+	margin-top: 20px;
 }
