--- a/src/Components/category_styles.css
+++ b/src/Components/category_styles.css
@@ -117,16 +117,19 @@
 }
 
 .inpName,
-.inpDescr{
+.inpDescr,
+.inpType{
 	width: 250px;
 	padding: 10px;
 	font-size: 16px;
 	color: #737373;
 	border: 1px solid #737373;
+	box-sizing: border-box;
 }
 
 .inpName:focus,
-.inpDescr:focus{	
+.inpDescr:focus
+.inpType:focus{	
 	box-shadow: 0 0 4px 4px #d9d9d9;
 }
 
